--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-﻿    <img src="1.jpg" style="width:555px" />
-    <img src="2.jpg" style="width:555px" />
+﻿<a href="question1.html">Solution 1</a>
+<br />
+<br />
+<a href="question2.html">Solution 2</a>
+<br />
+<br />
+<a href="question3.html">Solution 3</a>
+<br />
+<br />
+<a href="question4objectLiteral.html">Object Literal Solution</a>
+<br />
+<br /><a href="question4constructorFunction.html">Constructor Function Solution</a>
