--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <a href="question3.html">Solution 3</a>
 <br />
 <br />
-<a href="question4objectLiteral.html">Object Literal Solution</a>
+<a href="question4objectLiteral.html">Solution 4 Object Literal</a>
 <br />
-<br /><a href="question4constructorFunction.html">Constructor Function Solution</a>
+<br /><a href="question4constructorFunction.html">Solution 4 Constructor Function</a>
